# tools

./: README.md  callgrind.out.1029
crates/rome_analyze/src/: context.rs  lib.rs  matcher.rs  registry.rs  rule.rs  signals.rs
crates/rome_analyze/src/analyzers/: no_compare_neg_zero.rs  no_delete.rs  no_double_equals.rs  no_negation_else.rs  use_single_case_statement.rs  use_single_var_declarator.rs  use_valid_typeof.rs  use_while.rs
crates/rome_analyze/tests/: spec_tests.rs
crates/rome_cli/: Cargo.toml
crates/rome_cli/examples/: pipeline.rs
crates/rome_cli/tests/: main.rs
crates/rome_css_parser/: Cargo.toml  build.rs  package.json
crates/rome_css_parser/benches/: cssparser.rs  test.css  tree_sitter.rs
crates/rome_css_parser/src/: lexer.rs  lib.rs  main.rs  parser.rs
crates/rome_css_syntax/src/: lib.rs  syntax_node.rs  util.rs
crates/rome_formatter/: Cargo.toml
crates/rome_formatter/src/: buffer.rs  builders.rs  comments.rs  format_element.rs  formatter.rs  lib.rs  macros.rs
crates/rome_js_analyze/src/: lib.rs
crates/rome_js_formatter/: Cargo.toml
crates/rome_js_formatter/src/: builders.rs  comments.rs  context.rs  formatter.rs  formatter_traits.rs  lib.rs
crates/rome_js_parser/src/: lib.rs  lossless_tree_sink.rs  parse.rs
crates/rome_js_syntax/: Cargo.toml
crates/rome_js_syntax/src/: lib.rs  stmt_ext.rs
crates/rome_lsp/src/: utils.rs
crates/rome_rowan/src/: cursor.rs  lib.rs  raw_language.rs  syntax.rs
crates/rome_rowan/src/ast/: mod.rs
crates/rome_service/src/: workspace.rs
npm/rome/: README.md
website/playground/src/: lib.rs
(+108 files in other folders)
