[package]
name = "rome_css_parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cssparser = "0.29.2"
rome_rowan = { path = "../rome_rowan" }
rome_css_syntax = { path = "../rome_css_syntax" }
tree-sitter = "0.20.6"

[dev-dependencies]
criterion = "0.3.5"


[build-dependencies]
cc="*"

[[bench]]
name = "tree_sitter"
harness = false

[[bench]]
name = "cssparser"
harness = false